<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:weightSum="1">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:background="@color/greenapp"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            android:layout_height="match_parent">


            <com.guilla.lyricswriter.fonts.TextViewLoveStory
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/newgroup"
                android:textSize="@dimen/textsize18"
                android:textColor="@color/white"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                app:LoveStory="lovestory.ttf"
                android:id="@+id/toolbar_title"
                android:gravity="center_vertical" />


        </android.support.v7.widget.Toolbar>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@drawable/bb_bottom_bar_top_shadow"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:background="@color/grey"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:id="@+id/frame_expand"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/namegroup"
                    android:textSize="@dimen/textsize13"
                    android:layout_margin="10dp"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/grey"
                android:weightSum="3">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/white"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.5">


                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:inputType="textPersonName"
                            android:hint="@string/notename"
                            android:ems="10"
                            android:textSize="@dimen/textsize15"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:gravity="bottom|center"
                            android:id="@+id/createGroup_ET"
                            android:layout_weight="2" />


                </LinearLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.5"
                    android:background="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:weightSum="2">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/create"
                        android:textStyle="bold"
                        android:background="@drawable/roundedbt"
                        android:textColor="@color/white"
                        android:id="@+id/createGroup_BT"
                        android:layout_margin="5dp"
                        android:textSize="@dimen/textsize15"
                        android:layout_weight="0.8"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>
